Revert "agent 翻译"
This reverts commit b5fabc06